# game_remote_sdk

./: CMakeLists.txt  backup_handler.c  cjson.c  cjson.h  control_handler.c  defines.h  event_cb.c  event_cb.h  event_util.c  event_util.h  handler.h  interface.c  interface.h  list.c  list.h  net.c  net.h  stream_handler.c  utils.c  utils.h
